src/parser/src/rustedParser.ts
// Generated from src/rusted.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { rustedListener } from "./rustedListener.js";
import { rustedVisitor } from "./rustedVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class rustedParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly T__27 = 28;
    public static readonly T__28 = 29;
    public static readonly T__29 = 30;
    public static readonly T__30 = 31;
    public static readonly T__31 = 32;
    public static readonly T__32 = 33;
    public static readonly IDENTIFIER = 34;
    public static readonly INTEGER_LITERAL = 35;
    public static readonly BOOLEAN_LITERAL = 36;
    public static readonly STRING_LITERAL = 37;
    public static readonly COMMENT = 38;
    public static readonly MULTILINE_COMMENT = 39;
    public static readonly WS = 40;
    public static readonly RULE_program = 0;
    public static readonly RULE_item = 1;
    public static readonly RULE_function = 2;
    public static readonly RULE_parameter_list = 3;
    public static readonly RULE_parameter = 4;
    public static readonly RULE_struct_def = 5;
    public static readonly RULE_struct_field = 6;
    public static readonly RULE_block = 7;
    public static readonly RULE_statement = 8;
    public static readonly RULE_let_statement = 9;
    public static readonly RULE_expression_statement = 10;
    public static readonly RULE_return_statement = 11;
    public static readonly RULE_if_statement = 12;
    public static readonly RULE_while_statement = 13;
    public static readonly RULE_expression = 14;
    public static readonly RULE_assignment_expr = 15;
    public static readonly RULE_logical_expr = 16;
    public static readonly RULE_comparison_expr = 17;
    public static readonly RULE_additive_expr = 18;
    public static readonly RULE_multiplicative_expr = 19;
    public static readonly RULE_unary_expr = 20;
    public static readonly RULE_primary_expr = 21;
    public static readonly RULE_function_call = 22;
    public static readonly RULE_struct_init = 23;
    public static readonly RULE_struct_init_field = 24;
    public static readonly RULE_type = 25;
    public static readonly RULE_literal = 26;

    public static readonly literalNames = [
        null, "'fn'", "'('", "')'", "'->'", "','", "':'", "'struct'", "'{'", 
        "'}'", "'let'", "'mut'", "'='", "';'", "'return'", "'if'", "'else'", 
        "'while'", "'&&'", "'||'", "'=='", "'!='", "'<'", "'<='", "'>'", 
        "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'.'", "'&'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "IDENTIFIER", "INTEGER_LITERAL", "BOOLEAN_LITERAL", "STRING_LITERAL", 
        "COMMENT", "MULTILINE_COMMENT", "WS"
    ];
    public static readonly ruleNames = [
        "program", "item", "function", "parameter_list", "parameter", "struct_def", 
        "struct_field", "block", "statement", "let_statement", "expression_statement", 
        "return_statement", "if_statement", "while_statement", "expression", 
        "assignment_expr", "logical_expr", "comparison_expr", "additive_expr", 
        "multiplicative_expr", "unary_expr", "primary_expr", "function_call", 
        "struct_init", "struct_init_field", "type", "literal",
    ];

    public get grammarFileName(): string { return "rusted.g4"; }
    public get literalNames(): (string | null)[] { return rustedParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return rustedParser.symbolicNames; }
    public get ruleNames(): string[] { return rustedParser.ruleNames; }
    public get serializedATN(): number[] { return rustedParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, rustedParser._ATN, rustedParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, rustedParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 57;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1154) !== 0)) {
                {
                {
                this.state = 54;
                this.item();
                }
                }
                this.state = 59;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 60;
            this.match(rustedParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public item(): ItemContext {
        let localContext = new ItemContext(this.context, this.state);
        this.enterRule(localContext, 2, rustedParser.RULE_item);
        try {
            this.state = 65;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case rustedParser.T__0:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 62;
                this.function_();
                }
                break;
            case rustedParser.T__6:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 63;
                this.struct_def();
                }
                break;
            case rustedParser.T__9:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 64;
                this.let_statement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 4, rustedParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 67;
            this.match(rustedParser.T__0);
            this.state = 68;
            this.match(rustedParser.IDENTIFIER);
            this.state = 69;
            this.match(rustedParser.T__1);
            this.state = 71;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 34) {
                {
                this.state = 70;
                this.parameter_list();
                }
            }

            this.state = 73;
            this.match(rustedParser.T__2);
            this.state = 76;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 4) {
                {
                this.state = 74;
                this.match(rustedParser.T__3);
                this.state = 75;
                this.type_();
                }
            }

            this.state = 78;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameter_list(): Parameter_listContext {
        let localContext = new Parameter_listContext(this.context, this.state);
        this.enterRule(localContext, 6, rustedParser.RULE_parameter_list);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 80;
            this.parameter();
            this.state = 85;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 81;
                    this.match(rustedParser.T__4);
                    this.state = 82;
                    this.parameter();
                    }
                    }
                }
                this.state = 87;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 4, this.context);
            }
            this.state = 89;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 5) {
                {
                this.state = 88;
                this.match(rustedParser.T__4);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameter(): ParameterContext {
        let localContext = new ParameterContext(this.context, this.state);
        this.enterRule(localContext, 8, rustedParser.RULE_parameter);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 91;
            this.match(rustedParser.IDENTIFIER);
            this.state = 92;
            this.match(rustedParser.T__5);
            this.state = 93;
            this.type_();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public struct_def(): Struct_defContext {
        let localContext = new Struct_defContext(this.context, this.state);
        this.enterRule(localContext, 10, rustedParser.RULE_struct_def);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 95;
            this.match(rustedParser.T__6);
            this.state = 96;
            this.match(rustedParser.IDENTIFIER);
            this.state = 97;
            this.match(rustedParser.T__7);
            this.state = 101;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 34) {
                {
                {
                this.state = 98;
                this.struct_field();
                }
                }
                this.state = 103;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 104;
            this.match(rustedParser.T__8);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public struct_field(): Struct_fieldContext {
        let localContext = new Struct_fieldContext(this.context, this.state);
        this.enterRule(localContext, 12, rustedParser.RULE_struct_field);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 106;
            this.match(rustedParser.IDENTIFIER);
            this.state = 107;
            this.match(rustedParser.T__5);
            this.state = 108;
            this.type_();
            this.state = 110;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 5) {
                {
                this.state = 109;
                this.match(rustedParser.T__4);
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 14, rustedParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 112;
            this.match(rustedParser.T__7);
            this.state = 116;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2281882884) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 15) !== 0)) {
                {
                {
                this.state = 113;
                this.statement();
                }
                }
                this.state = 118;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 119;
            this.match(rustedParser.T__8);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 16, rustedParser.RULE_statement);
        try {
            this.state = 127;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case rustedParser.T__9:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 121;
                this.let_statement();
                }
                break;
            case rustedParser.T__1:
            case rustedParser.T__26:
            case rustedParser.T__30:
            case rustedParser.IDENTIFIER:
            case rustedParser.INTEGER_LITERAL:
            case rustedParser.BOOLEAN_LITERAL:
            case rustedParser.STRING_LITERAL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 122;
                this.expression_statement();
                }
                break;
            case rustedParser.T__13:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 123;
                this.return_statement();
                }
                break;
            case rustedParser.T__7:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 124;
                this.block();
                }
                break;
            case rustedParser.T__14:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 125;
                this.if_statement();
                }
                break;
            case rustedParser.T__16:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 126;
                this.while_statement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public let_statement(): Let_statementContext {
        let localContext = new Let_statementContext(this.context, this.state);
        this.enterRule(localContext, 18, rustedParser.RULE_let_statement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 129;
            this.match(rustedParser.T__9);
            this.state = 131;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 130;
                this.match(rustedParser.T__10);
                }
            }

            this.state = 133;
            this.match(rustedParser.IDENTIFIER);
            this.state = 136;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 6) {
                {
                this.state = 134;
                this.match(rustedParser.T__5);
                this.state = 135;
                this.type_();
                }
            }

            this.state = 140;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 138;
                this.match(rustedParser.T__11);
                this.state = 139;
                this.expression();
                }
            }

            this.state = 142;
            this.match(rustedParser.T__12);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression_statement(): Expression_statementContext {
        let localContext = new Expression_statementContext(this.context, this.state);
        this.enterRule(localContext, 20, rustedParser.RULE_expression_statement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 144;
            this.expression();
            this.state = 145;
            this.match(rustedParser.T__12);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public return_statement(): Return_statementContext {
        let localContext = new Return_statementContext(this.context, this.state);
        this.enterRule(localContext, 22, rustedParser.RULE_return_statement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 147;
            this.match(rustedParser.T__13);
            this.state = 149;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2281701380) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 15) !== 0)) {
                {
                this.state = 148;
                this.expression();
                }
            }

            this.state = 151;
            this.match(rustedParser.T__12);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public if_statement(): If_statementContext {
        let localContext = new If_statementContext(this.context, this.state);
        this.enterRule(localContext, 24, rustedParser.RULE_if_statement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            this.match(rustedParser.T__14);
            this.state = 154;
            this.expression();
            this.state = 155;
            this.block();
            this.state = 161;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 16) {
                {
                this.state = 156;
                this.match(rustedParser.T__15);
                this.state = 159;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case rustedParser.T__14:
                    {
                    this.state = 157;
                    this.if_statement();
                    }
                    break;
                case rustedParser.T__7:
                    {
                    this.state = 158;
                    this.block();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public while_statement(): While_statementContext {
        let localContext = new While_statementContext(this.context, this.state);
        this.enterRule(localContext, 26, rustedParser.RULE_while_statement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 163;
            this.match(rustedParser.T__16);
            this.state = 164;
            this.expression();
            this.state = 165;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression(): ExpressionContext {
        let localContext = new ExpressionContext(this.context, this.state);
        this.enterRule(localContext, 28, rustedParser.RULE_expression);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 167;
            this.assignment_expr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignment_expr(): Assignment_exprContext {
        let localContext = new Assignment_exprContext(this.context, this.state);
        this.enterRule(localContext, 30, rustedParser.RULE_assignment_expr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 169;
            this.logical_expr();
            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 170;
                this.match(rustedParser.T__11);
                this.state = 171;
                this.assignment_expr();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public logical_expr(): Logical_exprContext {
        let localContext = new Logical_exprContext(this.context, this.state);
        this.enterRule(localContext, 32, rustedParser.RULE_logical_expr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 174;
            this.comparison_expr();
            this.state = 179;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 18 || _la === 19) {
                {
                {
                this.state = 175;
                _la = this.tokenStream.LA(1);
                if(!(_la === 18 || _la === 19)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 176;
                this.comparison_expr();
                }
                }
                this.state = 181;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public comparison_expr(): Comparison_exprContext {
        let localContext = new Comparison_exprContext(this.context, this.state);
        this.enterRule(localContext, 34, rustedParser.RULE_comparison_expr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 182;
            this.additive_expr();
            this.state = 187;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 66060288) !== 0)) {
                {
                {
                this.state = 183;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 66060288) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 184;
                this.additive_expr();
                }
                }
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public additive_expr(): Additive_exprContext {
        let localContext = new Additive_exprContext(this.context, this.state);
        this.enterRule(localContext, 36, rustedParser.RULE_additive_expr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 190;
            this.multiplicative_expr();
            this.state = 195;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 26 || _la === 27) {
                {
                {
                this.state = 191;
                _la = this.tokenStream.LA(1);
                if(!(_la === 26 || _la === 27)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 192;
                this.multiplicative_expr();
                }
                }
                this.state = 197;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public multiplicative_expr(): Multiplicative_exprContext {
        let localContext = new Multiplicative_exprContext(this.context, this.state);
        this.enterRule(localContext, 38, rustedParser.RULE_multiplicative_expr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 198;
            this.unary_expr();
            this.state = 203;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1879048192) !== 0)) {
                {
                {
                this.state = 199;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1879048192) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 200;
                this.unary_expr();
                }
                }
                this.state = 205;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public unary_expr(): Unary_exprContext {
        let localContext = new Unary_exprContext(this.context, this.state);
        this.enterRule(localContext, 40, rustedParser.RULE_unary_expr);
        let _la: number;
        try {
            this.state = 209;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case rustedParser.T__26:
            case rustedParser.T__30:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 206;
                _la = this.tokenStream.LA(1);
                if(!(_la === 27 || _la === 31)) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 207;
                this.unary_expr();
                }
                break;
            case rustedParser.T__1:
            case rustedParser.IDENTIFIER:
            case rustedParser.INTEGER_LITERAL:
            case rustedParser.BOOLEAN_LITERAL:
            case rustedParser.STRING_LITERAL:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 208;
                this.primary_expr(0);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public primary_expr(): Primary_exprContext;
    public primary_expr(_p: number): Primary_exprContext;
    public primary_expr(_p?: number): Primary_exprContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new Primary_exprContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 42;
        this.enterRecursionRule(localContext, 42, rustedParser.RULE_primary_expr, _p);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 220;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 22, this.context) ) {
            case 1:
                {
                this.state = 212;
                this.match(rustedParser.IDENTIFIER);
                }
                break;
            case 2:
                {
                this.state = 213;
                this.literal();
                }
                break;
            case 3:
                {
                this.state = 214;
                this.function_call();
                }
                break;
            case 4:
                {
                this.state = 215;
                this.match(rustedParser.T__1);
                this.state = 216;
                this.expression();
                this.state = 217;
                this.match(rustedParser.T__2);
                }
                break;
            case 5:
                {
                this.state = 219;
                this.struct_init();
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 227;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 23, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new Primary_exprContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, rustedParser.RULE_primary_expr);
                    this.state = 222;
                    if (!(this.precpred(this.context, 1))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 1)");
                    }
                    this.state = 223;
                    this.match(rustedParser.T__31);
                    this.state = 224;
                    this.match(rustedParser.IDENTIFIER);
                    }
                    }
                }
                this.state = 229;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 23, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public function_call(): Function_callContext {
        let localContext = new Function_callContext(this.context, this.state);
        this.enterRule(localContext, 44, rustedParser.RULE_function_call);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 230;
            this.match(rustedParser.IDENTIFIER);
            this.state = 231;
            this.match(rustedParser.T__1);
            this.state = 240;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 2281701380) !== 0) || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 15) !== 0)) {
                {
                this.state = 232;
                this.expression();
                this.state = 237;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 5) {
                    {
                    {
                    this.state = 233;
                    this.match(rustedParser.T__4);
                    this.state = 234;
                    this.expression();
                    }
                    }
                    this.state = 239;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }
